# cartesian_trajectory_generator

./: .README.md.swp  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
action/: Trajectory.action
cfg/: .pose_param.cfg.swp  pose_param.cfg
config/: params.yaml  trajectory_generator_params.yaml
generated_logs/: commanded_trajectory.txt  datapoints5.txt  long_trajectory1.txt  long_trajectory3.txt  publish_rate10.txt  publish_rate100.txt  publish_rate1000.txt  publish_rate5.txt  real_trajectory.txt  simulation.txt  test.txt  trajectory2_stiffness_1000.txt  trajectory2_stiffness_200.txt  trajectory2_stiffness_500.txt
include/cartesian_trajectory_generator/: cartesian_trajectory_generator_base.h  cartesian_trajectory_generator_ros.h  overlay_functions.h  velocity_functions.h
launch/: publisher_demo.launch  test_transform_publisher.launch  trajectory_generator.launch
msg/: OverlayMotionConf.msg  generate_pose.msg  pose.msg
res/: tf.rviz
src/: cartesian_trajectory_generator_base.cpp  cartesian_trajectory_generator_ros.cpp  cartesian_trajectory_generator_ros_node.cpp  listener.cpp  user_input.cpp
srv/: .generate_trajectory.srv.swp  OverlayMotion.srv  generate_trajectory.srv
trajectory_logger/: test.txt
